src/snapshots/serde_ndim__nalgebra__tests__bool_matrix.snap
---
source: src/nalgebra.rs
expression: "roundtrip!(DMatrix<bool>, [[true, false], [false, true]]).unwrap()"
---

  ┌           ┐
  │ true false │
  │ false true │
  └           ┘
