src/snapshots/serde_ndim__nalgebra__tests__inner_mismatch.snap
---
source: src/nalgebra.rs
expression: "deserialize_json!([[1, 2, 3, 4], [5, 6, 8]]).unwrap_err()"
---

 1 | [[1, 2, 3, 4], [5, 6, 8]]
   |                         ^ expected more elements at line 1 column 24

