src/snapshots/serde_ndim__nalgebra__tests__inner_mismatch_during_first_descent.snap
---
source: src/nalgebra.rs
expression: "roundtrip!([[1, [2], 3, 4], [5, 6, 7, 8]]).unwrap_err()"
---

   | [
   |   1,
   |   [
 5 |     2
   |     ^ invalid type: sequence, expected a single number at line 5 column 6
   |   ],
   |   3,
   |   4

