src/snapshots/serde_ndim__nalgebra__tests__invalid_type.snap
---
source: src/nalgebra.rs
expression: "roundtrip!([['a']]).unwrap_err()"
---

   | [
   |   [
 3 |     "a"
   |        ^ invalid type: string "a", expected a sequence or a single number at line 3 column 7
   |   ]
   | ]
