src/snapshots/serde_ndim__nalgebra__tests__larger_dimension_count.snap
---
source: src/nalgebra.rs
expression: "roundtrip!([[[1, 2, 3, 4], [5, 6, 7, 8]], [[9, 10, 11, 12], [13, 14, 15, 16]],\n        [[17, 18, 19, 20], [21, 22, 23, 24]]]).unwrap_err()"
---

   | [
   |   [
   |     [
 4 |       1,
   |       ^ maximum dims of 2 exceeded at line 4 column 6
   |       2,
   |       3,
   |       4

