src/snapshots/serde_ndim__nalgebra__tests__matrix.snap
---
source: src/nalgebra.rs
expression: matrix
---

  ┌           ┐
  │ 1 5 │
  │ 2 6 │
  │ 3 7 │
  │ 4 8 │
  └           ┘


