src/snapshots/serde_ndim__nalgebra__tests__smaller_dimension_count.snap
---
source: src/nalgebra.rs
expression: "roundtrip!([1, 2, 3, 4]).unwrap_err()"
---

   | [
 2 |   1,
   |    ^ didn't reach the expected minimum dims 2, got 1 at line 2 column 3
   |   2,
   |   3,
   |   4
   | ]

